[metadata]
name = swyft
# version = We are using setuptools_scm, see https://github.com/pypa/setuptools_scm
description = Nested ratio estimation and inhomogeneous poisson point process sample caching for simulator efficient marginal posterior estimation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/undark-lab/swyft
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: GPU
    Operating System :: OS Independent
    Operating System :: POSIX
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    torch>=1.4.0
    numpy>=1.18.1
    zarr>=2.5.0
    numcodecs>=0.7.2
    tqdm>=4.46.0
    scipy>=1.4.1
    matplotlib>=3.1.3
    scikit-learn>=0.23.2
    dask[complete]>=2021.3.0
    fasteners==0.15

[options.extras_require]
dev =
    pre-commit
    black
    isort
    pytest
    flake8

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
