[metadata]
name = swyft
# version = We are using setuptools_scm, see https://github.com/pypa/setuptools_scm
description = Truncated Marginal Neural Ratio Estimation with an inhomogeneous poisson point process cache.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/undark-lab/swyft
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: GPU
    Operating System :: OS Independent
    Operating System :: POSIX
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    torch>=1.8.2
    numpy>=1.18.1
    zarr>=2.5.0
    numcodecs>=0.7.2
    tqdm>=4.46.0
    scipy>=1.4.1
    matplotlib>=3.1.3
    scikit-learn>=0.23.2
    dask[complete]>=2021.3.0
    pandas
    seaborn
    toolz
    fasteners==0.15

[options.extras_require]
dev =
    pre-commit
    black
    isort
    pytest

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-bibtex
    nbsphinx
    nbsphinx_link
    m2r2
