[metadata]
name = swyft
# version = We are using setuptools_scm, see https://github.com/pypa/setuptools_scm
description = Universal scalable simulation-based inference with TMNRE (Truncated Marginal Neural Ratio Estimation) and pytorch-lightning.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/undark-lab/swyft
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: GPU
    Operating System :: OS Independent
    Operating System :: POSIX
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    toolz>=0.10.0
    numpy>=1.18.1
    torch>=1.10.2
    pytorch_lightning>=1.5.10, <=1.9.0
    zarr>=2.5.0
    matplotlib>=3.1.3
    scipy>=1.4.1
    torchist>=0.1.7
    fasteners>=0.17

#    numcodecs>=0.7.2
#    tqdm>=4.46.0
#    scikit-learn>=0.23.2
#    dask[complete]>=2021.3.0
#    pandas
#    seaborn

[options.extras_require]
dev =
    pre-commit
    black
    isort
    pytest
docs =
    sphinx
#    sphinx_rtd_theme
    sphinxcontrib-bibtex
    nbsphinx
    nbsphinx_link
#    m2r2
    ipykernel
    furo
